Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, text> yoda
        text y = yoda:useForce(true, true)
        output "passed"
     end
end
