Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, integer> yoda
        boolean y = yoda(true, true, true)
     end
end
